--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,7 +7,10 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="styleshet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.9.0/simple-lightbox.min.css"
+    integrity="sha512-y3NISuXPWLtakXJJ2f4TpwJkvjbD8ud9hz398kDZB5eGGmIIufRcMhuz+/ld9L7zCmQheAZjtyfFLyN5w9P0rw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -16,6 +19,8 @@
     <ul class="gallery"></ul>
 
     <script src="js/02-lightbox.js" type="module"></script>
-    <script src ="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.js" 
+    integrity="sha512-BhE5J0LlN4PNea87xXSa65zUFN2eAiZaO2Dybd5bCUyoNAFphxpG6A5DwCD3RV0iqjqMpuXVzmbAML76ofjeyA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
